# grip

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: feedback-server-setup.md  gen_diagram.py  paper-sources.md  slack-bot-setup.md
scripts/: remove_cron.sh  run_feedback_server.sh  run_grip.sh  setup_cron.sh  setup_feedback_service.sh
src/grip/: __init__.py  cli.py  config.py  pipeline.py  server.py
src/grip/data/: interest_profile.example.txt  interest_profile.txt  member_prefs_example.yml
src/grip/feedback/: __init__.py  collector.py  digest_registry.py  updater.py
src/grip/fetchers/: __init__.py  arxiv.py  base.py  medrxiv_biorxiv.py  pubmed.py  rss.py  semantic_scholar.py
src/grip/manager/: __init__.py  app.py
src/grip/manager/templates/: index.html
src/grip/notifier/: __init__.py  formatter.py  slack.py
src/grip/profile/: __init__.py  manager.py  search_refiner.py  synthesizer.py
src/grip/scorer/: __init__.py  claude_scorer.py  prompts.py
src/grip/tests/: test_config.py  test_feedback.py  test_fetchers.py
src/grip/utils/: __init__.py  dedup.py
